Inline node adjustment
Allow to override node parameters using -e arguemnt.
For example, to override controller memory the following
cli argument can be provideed::
  -e override.controller.memory=123456

So all the parameters to override should be put under the 'override'
namespace followed by the node name.

RHOSINFRA-636

Change-Id: I5cfd7ded64d6a1738d37085027c435215a6b406d

--- a/plugins/virsh/tasks/download_images.yml
+++ b/plugins/virsh/tasks/download_images.yml
@@ -23,7 +23,7 @@
   until: download_image_result.msg.find("Request failed") == -1
   retries: 5
   delay: 5
-  with_dict: "{{ node_dict.disks }}"
+  with_dict: "{{ topology_node.disks }}"
 
 - name: adjust base image for this run
   shell: |
