Collect all *.yaml from stack home
We missed the  ~/external-lb.yaml now.

Change-Id: I0bed76ce8400ece406753ffc55f9e22128428c5b

--- a/settings/installer/ospd/ospd.yml
+++ b/settings/installer/ospd/ospd.yml
@@ -17,7 +17,7 @@ job:
     - /home/stack/*.yml
     - /home/stack/.instack/install-undercloud.log
     - /home/stack/deploy-overcloudrc
-    - /home/stack/network-environment*.yaml
+    - /home/stack/*.yaml
     - /home/stack/overcloudrc
     - /home/stack/overcloud_deploy.sh
     - /home/stack/stackrc
