--- a/settings/installer/ospd_composable/ospd_composable.yml
+++ b/settings/installer/ospd_composable/ospd_composable.yml
@@ -17,7 +17,7 @@ job:
     - /home/stack/*.yml
     - /home/stack/.instack/install-undercloud.log
     - /home/stack/deploy-overcloudrc
-    - /home/stack/network-environment*.yaml
+    - /home/stack/*.yaml
     - /home/stack/overcloudrc
     - /home/stack/overcloud_deploy.sh
     - /home/stack/stackrc
