Update inventory after failed OC deploy
Perform inventory update even in case of
failed overcloud deployment. This can help to get
logs from the node in case they have been
deployed prior failure.

RHOSINFRA-915

Change-Id: I86525325b131c9a3d84ba1bd7f98fb31e558f5ba

--- a/playbooks/installer/ospd/overcloud/update_inventory.yml
+++ b/playbooks/installer/ospd/overcloud/update_inventory.yml
@@ -125,3 +125,12 @@
           dest: "{{ lookup('env', 'PWD') }}/hosts"
           state: link
           src: "{{ lookup('env', 'PWD') }}/hosts-installer"
+
+- name: Fail the overcloud deployment
+  hosts: undercloud
+  tags: inventory_update
+  gather_facts: no
+  any_errors_fatal: true
+  tasks:
+      - fail: msg="Overcloud deployment failed... :("
+        when: overcloud_deploy is defined and overcloud_deploy.rc != 0
