--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 setuptools>=11.3
 pytz>=2016.3
-shade==1.7.0
 ansible==2.1.1
 colorlog>=2.6.1
 ipaddress==1.0.16
@@ -8,3 +7,19 @@ PyYAML>=3.11
 yamlordereddictloader>=0.1.1
 requests>=2.9.1
 Babel!=2.3.0,!=2.3.1,!=2.3.2,!=2.3.3,>=1.3
+# Old shade is problematic library - we
+# must have specific dependencies tied
+# to this old version - see below.
+shade==1.7.0
+# These dependencies must be frozen
+# because of old shade doesn't support
+# newer ones.
+python-openstackclient==3.8.1
+python-cinderclient==1.11.0
+python-ironicclient==1.11.1
+keystoneauth1==2.18.0
+oslo.i18n==3.12.0
+oslo.utils==3.22.0
+debtcollector==1.11.0
+oslo.serialization==2.16.0
+stevedore==1.20.0
