[Overcloud] SSL - Sign CA cert with Undercloud Cert
If stackrc has "https" in URI, then Undercloud has SSL and we should
sign overcloud CA cert with undercloud cert instead of self signing.
RHOSINFRA-833

Change-Id: I98cd46a9fe1c5c16f48a8affc09e6cbc958d8e28

--- a/plugins/tripleo-overcloud/tasks/ssl.yml
+++ b/plugins/tripleo-overcloud/tasks/ssl.yml
@@ -17,8 +17,16 @@
       regexp: \.\.
   with_items: "{{ copy_templates.results }}"
 
+- name: discover undercloud ssl
+  command: "grep -Fq OS_AUTH_URL=https {{ openstackrc }}"
+  vars:
+      openstackrc: ~/stackrc
+  register: undercloud_ssl
+  ignore_errors: true
+
 - name: create the self signed SSL
   command: "openssl genrsa -out {{ template_base }}/overcloud-privkey.pem 2048"
+  when: not undercloud_ssl|succeeded
 
 - name: extract our external allocation pools start value
   command: "cat {{ template_base }}/network/{{ network_environment_file }}"
@@ -27,16 +35,34 @@
 - name: generate openssl command
   vars:
       external_allocation_pool_start: "{{ (network_env.stdout | from_yaml).parameter_defaults.ExternalAllocationPools[0].start }}"
-  set_fact:
-      shell_command: >
-          openssl req -new -x509
+      self_signed: >
+          -new -x509
           -key {{ template_base }}/overcloud-privkey.pem
-          -out {{ template_base }}/overcloud-cacert.pem -days 365
-          -subj '/C=US/ST=NC/L=Raleigh/O=Red HAt/OU=QE/CN={{ external_allocation_pool_start }}'
+      uc_signed: >
+          -newkey rsa:2048 -nodes
+          -keyout {{ template_base }}/overcloud-privkey.pem
+  command: >
+      openssl req
+      {{ uc_signed if undercloud_ssl|succeeded else self_signed }}
+      -out {{ template_base }}/overcloud-cacert.pem -days 365
+      -subj '/C=US/ST=NC/L=Raleigh/O=Red HAt/OU=QE/CN={{ external_allocation_pool_start }}'
 
-# Ansible had trouble templating the above command straight to the shell module hence the above "set_fact"
-- name: create the self signed CA certificate
-  command: "{{ shell_command }}"
+- name: process server RSA keys
+  command: "openssl rsa -in {{ template_base }}/overcloud-privkey.pem  -out {{ template_base }}/overcloud-privkey.pem"
+  when: undercloud_ssl|succeeded
+
+- name: sign request with undercloud CA
+  vars:
+      undercloud_pkey: ~/undercloud-privkey.pem
+      underdloud_cacert: /etc/pki/ca-trust/source/anchors/undercloud-cacert.pem
+  command: >
+      openssl -req x509
+      -in {{ template_base }}/overcloud-cacert.pem -days 365
+      -CA {{ underdloud_cacert }}
+      -CAkey {{ undercloud_pkey }}
+      -set_serial 01
+      -out {{ template_base }}/overcloud-cacert.pem
+  when: undercloud_ssl|succeeded
 
 - name: update the tls template
   replace:
@@ -56,7 +82,10 @@
   become: yes
 
 - name: register the CA certificate
-  command: "cat {{ template_base }}/overcloud-cacert.pem"
+  vars:
+      underdloud_cacert: /etc/pki/ca-trust/source/anchors/undercloud-cacert.pem
+      overcloud_cacert: "{{ template_base }}/overcloud-cacert.pem"
+  command: "cat {{ underdloud_cacert if undercloud_ssl|succeeded else overcloud_cacert }}"
   register: cacert
 
 - name: register the private key
