--- a/plugins/tripleo-undercloud/upgrade.yml
+++ b/plugins/tripleo-undercloud/upgrade.yml
@@ -5,30 +5,37 @@
   tags: upgrade
   vars:
       rhos_release_rpm: "https://url.corp.redhat.com/rhos-release-latest-rpm"
-  pre_tasks:
-      - name: Get Undercloud version
-        become: true
-        become_user: root
-        become_method: sudo
-        find:
-            use_regex: yes
-            patterns: 'rhos-release-[0-9]+.*'
-            paths:
-              - '/etc/yum.repos.d/'
-        register: result
+      version_map:
+          - nova_version: '15'
+            rhos_version: '11'
+          - nova_version: '14'
+            rhos_version: '10'
+          - nova_version: '13'
+            rhos_version: '9'
+          - nova_version: '12'
+            rhos_version: '8'
+          - nova_version: '2015'
+            rhos_version: '7'
 
-      - set_fact:
-            undercloud_version: "{{ result.files[0]['path'] | basename | regex_replace('^rhos-release-([0-9]+).*$', '\\1') }}"
+  pre_tasks:
+      - name: Get nova version
+        shell: nova-manage --version 2>&1 | awk -F . '{print $1}'
+        register: nova_version
 
       - name: Validation
         include: "tasks/upgrade/validation.yml"
         tags: validation
+        vars:
+            undercloud_version:  "{{ (version_map|selectattr('nova_version', 'equalto', nova_version.stdout)|first)['rhos_version'] }}"
+
   roles:
       - role: rhos-release
-        release: "{{ (undercloud_version|int) + 1 }}"
+        release: "{{ (version_map|selectattr('nova_version', 'equalto', nova_version.stdout)|first)['rhos_version']|int + 1 }}"
         build: "{{ install.build }}"
         mirror: "{{ install.mirror | default(omit) }}"
         tags: upgrade
   tasks:
       - name: "Upgrade from version {{ undercloud_version }} to {{ (undercloud_version|int) + 1 }}"
         include: "tasks/upgrade/upgrade_{{ (undercloud_version|int) + 1 }}.yml"
+        vars:
+            undercloud_version:  "{{ (version_map|selectattr('nova_version', 'equalto', nova_version.stdout)|first)['rhos_version'] }}"
