Set git revision to newton for RHOS-7 tempest
* Switch to ostestr for running tests for rhos-7

* Enable tempest cleanup for rhos-7

Change-Id: I42c6d506b8acd257c4bab638c9dc7bcbd95b2f77

--- a/plugins/tempest/tasks/setup/git/main.yml
+++ b/plugins/tempest/tasks/setup/git/main.yml
@@ -17,7 +17,15 @@
       version: "{{ test.revision | default(omit) }}"
       dest: "~/{{ test.dir }}"
   register: tempest_repo
-  when: setup.local_dir is not defined
+  when: setup.local_dir is not defined and test.openstack.version|int > 7
+
+- name: Clone tempest for RHOS 7
+  git:
+      repo: "{{ setup.repo }}"
+      version: "{{ test.revision | newton }}"
+      dest: "~/{{ test.dir }}"
+  register: tempest_repo
+  when: setup.local_dir is not defined and test.openstack.version|int == 7
 
 - name: Fetch tempest from change
   synchronize: dest={{ test.dir }} src={{ test.local_dir }}/
