Update the tempest git repo to upstream tempest
https://review.gerrithub.io/355832 deprecates the forked
tempest repo from ocata release so we need to update the
git repo for each specific release.

Change-Id: Ida9b02716fa5c3f73d1b0354d5b6fe7d88ebec75

--- a/plugins/tempest/tasks/setup/git/main.yml
+++ b/plugins/tempest/tasks/setup/git/main.yml
@@ -13,8 +13,8 @@
 
 - name: Clone tempest
   git:
-      repo: "{{ setup.repo }}"
-      version: "{{ test.revision | default(omit) }}"
+      repo: "{{ setup.repo.test.openstack.version.repo|default(setup.repo.defaults.repo) }}"
+      version: "{{ setup.repo.test.openstack.version.branch|default(setup.repo.defaults.branch) }}"
       dest: "~/{{ test.dir }}"
   register: tempest_repo
   when: setup.local_dir is not defined
