--- a/plugins/tempest/vars/setup/git.yml
+++ b/plugins/tempest/vars/setup/git.yml
@@ -1,6 +1,26 @@
 setup:
-    repo: https://github.com/redhat-openstack/tempest.git
-
+    repo:
+        '10':
+            repo: "https://github.com/redhat-openstack/tempest.git"
+            branch: "newton"
+        '9':
+            repo: "https://github.com/redhat-openstack/tempest.git"
+            branch: "mitaka"
+        '8':
+            repo: "https://github.com/redhat-openstack/tempest.git"
+            branch: "liberty"
+        '7':
+            repo: "https://github.com/redhat-openstack/tempest.git"
+            branch: "kilo"
+        '6':
+            repo: "https://github.com/redhat-openstack/tempest.git"
+            branch: "juno"
+        '5':
+            repo: "https://github.com/redhat-openstack/tempest.git"
+            branch: "icehouse"
+        defaults:
+            repo: "https://git.openstack.org/openstack/tempest.git"
+            branch: "master"
     packages:
         - gcc
         - git
