Update the tempest git repo to upstream tempest
https://review.gerrithub.io/355832 deprecates the forked
tempest repo from ocata release so we need to update the
git repo for each specific release.

Change-Id: Ida9b02716fa5c3f73d1b0354d5b6fe7d88ebec75

--- a/plugins/tempest/vars/setup/git.yml
+++ b/plugins/tempest/vars/setup/git.yml
@@ -1,6 +1,26 @@
 setup:
-    repo: https://github.com/redhat-openstack/tempest.git
-
+    repo:
+        '10':
+            url: "https://github.com/redhat-openstack/tempest.git"
+            branch: "newton"
+        '9':
+            url: "https://github.com/redhat-openstack/tempest.git"
+            branch: "mitaka"
+        '8':
+            url: "https://github.com/redhat-openstack/tempest.git"
+            branch: "liberty"
+        '7':
+            url: "https://github.com/redhat-openstack/tempest.git"
+            branch: "kilo"
+        '6':
+            url: "https://github.com/redhat-openstack/tempest.git"
+            branch: "juno"
+        '5':
+            url: "https://github.com/redhat-openstack/tempest.git"
+            branch: "icehouse"
+        defaults:
+            url: "https://git.openstack.org/openstack/tempest.git"
+            branch: "master"
     packages:
         - gcc
         - git
