Update the tempest git repo to upstream tempest
https://review.gerrithub.io/355832 deprecates the forked
tempest repo from ocata release so we need to update the
git repo for each specific release.

Change-Id: Ida9b02716fa5c3f73d1b0354d5b6fe7d88ebec75

--- a/plugins/tempest/vars/setup/git.yml
+++ b/plugins/tempest/vars/setup/git.yml
@@ -1,6 +1,12 @@
 setup:
-    repo: https://github.com/redhat-openstack/tempest.git
-
+    repo:
+        '10': "https://github.com/redhat-openstack/tempest.git"
+        '9': "https://github.com/redhat-openstack/tempest.git"
+        '8': "https://github.com/redhat-openstack/tempest.git"
+        '7': "https://github.com/redhat-openstack/tempest.git"
+        '6': "https://github.com/redhat-openstack/tempest.git"
+        '5': "https://github.com/redhat-openstack/tempest.git"
+        defaults: "https://git.openstack.org/openstack/tempest.git"
     packages:
         - gcc
         - git
