--- a/plugins/tempest/vars/setup/git.yml
+++ b/plugins/tempest/vars/setup/git.yml
@@ -1,6 +1,23 @@
 setup:
-    repo: https://github.com/redhat-openstack/tempest.git
-
+    repo:
+        '12':
+             - https://github.com/openstack/tempest.git
+        '11':
+             - https://github.com/openstack/tempest.git
+        '10':
+             - https://github.com/redhat-openstack/tempest.git
+        '9':
+             - https://github.com/redhat-openstack/tempest.git
+        '8':
+             - https://github.com/redhat-openstack/tempest.git
+        '7':
+             - https://github.com/redhat-openstack/tempest.git
+        '6':
+             - https://github.com/redhat-openstack/tempest.git
+        '5':
+             - https://github.com/redhat-openstack/tempest.git
+        defaults:
+            -  https://github.com/openstack/tempest.git
     packages:
         - gcc
         - git
