Update the tempest git repo to upstream tempest
https://review.gerrithub.io/355832 deprecates the forked tempest repo
from ocata release so we need to update the git repo pointing to
specific release.

Change-Id: Ida9b02716fa5c3f73d1b0354d5b6fe7d88ebec75

--- a/plugins/tempest/tasks/setup/git/main.yml
+++ b/plugins/tempest/tasks/setup/git/main.yml
@@ -13,11 +13,12 @@
 
 - name: Clone tempest
   git:
-      repo: "{{ setup.repo }}"
+      repo: "{{ item }}"
       version: "{{ test.revision | default(omit) }}"
       dest: "~/{{ test.dir }}"
   register: tempest_repo
   when: setup.local_dir is not defined
+  with_items: "{{ setup.repo[test.openstack.version] }}"
 
 - name: Fetch tempest from change
   synchronize: dest={{ test.dir }} src={{ test.local_dir }}/
