--- a/plugins/tripleo-overcloud/install.yml
+++ b/plugins/tripleo-overcloud/install.yml
@@ -1,36 +1,36 @@
-- name: Perform validations
-  include: "{{ overcloud_validate | default('validate.yml') }}"
-  tags:
-      - validation
+# - name: Perform validations
+#   include: "{{ overcloud_validate | default('validate.yml') }}"
+#   tags:
+#       - validation
 
-- name: Perform pre install tasks
-  include: "{{ overcloud_pre | default('pre.yml') }}"
-  when: install.introspect|default('')
+# - name: Perform pre install tasks
+#   include: "{{ overcloud_pre | default('pre.yml') }}"
+#   when: install.introspect|default('')
 
-- name: Provision loadbalancer node
-  include: loadbalancer.yml
-  tags:
-      - loadbalancer
-      - loadbalancer_setup
-  when: "'loadbalancer' in groups"
+# - name: Provision loadbalancer node
+#   include: loadbalancer.yml
+#   tags:
+#       - loadbalancer
+#       - loadbalancer_setup
+#   when: "'loadbalancer' in groups"
 
-- name: Introspect our machines
-  include: "{{ overcloud_introspect | default('introspect.yml') }}"
-  when: install.introspect|default('')
+# - name: Introspect our machines
+#   include: "{{ overcloud_introspect | default('introspect.yml') }}"
+#   when: install.introspect|default('')
 
-- name: Tag our machines with proper flavors
-  include: "{{ overcloud_flavors | default('tag.yml') }}"
-  when: install.tagging|default('')
+# - name: Tag our machines with proper flavors
+#   include: "{{ overcloud_flavors | default('tag.yml') }}"
+#   when: install.tagging|default('')
 
-- name: Deploy the Overcloud
-  vars:
-      templates:
-          generate_host_name_template: yes
-          storage_add_scale: yes
-  include: "{{ overcloud_deploy | default('deploy.yml') }}"
-  when:
-      - install.deploy|default('')
-      - not install.role|default('')
+# - name: Deploy the Overcloud
+#   vars:
+#       templates:
+#           generate_host_name_template: yes
+#           storage_add_scale: yes
+#   include: "{{ overcloud_deploy | default('deploy.yml') }}"
+#   when:
+#       - install.deploy|default('')
+#       - not install.role|default('')
 
 - name: Deploy the Overcloud with composable roles
   vars:
@@ -43,6 +43,6 @@
       - install.deploy|default('')
       - install.role is defined
 
-- name: Perform post install tasks
-  include: "{{ overcloud_post | default('post.yml') }}"
-  when: install.post|default('')
+# - name: Perform post install tasks
+#   include: "{{ overcloud_post | default('post.yml') }}"
+#   when: install.post|default('')
