--- a/plugins/tripleo-overcloud/tasks/composable_roles/add_role_vars.yml
+++ b/plugins/tripleo-overcloud/tasks/composable_roles/add_role_vars.yml
@@ -18,6 +18,5 @@
 - name: include role vars for "{{ node_name }}"
   vars:
       folder: "{{ 'default' if not user_role.stat.exists else install.role.files }}"
-  include_vars: "files/roles/{{ folder }}/{{ node_name }}.yml"
+  include_vars: "{{ playbook_dir }}/files/roles/{{ folder }}/{{ node_name }}.yml"
   when: "{{ role_var_name}} is not defined"
-
