--- a/plugins/tripleo-overcloud/files/roles/networker/controller.yml
+++ b/plugins/tripleo-overcloud/files/roles/networker/controller.yml
@@ -18,11 +18,11 @@ controller_role:
         - OS::TripleO::Services::CinderBackup
         - OS::TripleO::Services::CinderScheduler
         - OS::TripleO::Services::CinderVolume
-        - "{% if install.version |int < 11 %}OS::TripleO::Services::Core{% endif %}"
+        "{% if install.version |int < 11 %}- OS::TripleO::Services::Core{% endif %}"
         - OS::TripleO::Services::Kernel
         - OS::TripleO::Services::Keystone
         - OS::TripleO::Services::GlanceApi
-        - OS::TripleO::Services::GlanceRegistry
+        "{% if install.version |int < 11 %}- OS::TripleO::Services::GlanceRegistry{% endif %}"
         - OS::TripleO::Services::HeatApi
         - OS::TripleO::Services::HeatApiCfn
         - OS::TripleO::Services::HeatApiCloudwatch
@@ -43,7 +43,8 @@ controller_role:
         - OS::TripleO::Services::NovaScheduler
         - OS::TripleO::Services::NovaConsoleauth
         - OS::TripleO::Services::NovaVncProxy
-        - "{% if install.version |int > 10 %}OS::TripleO::Services::NovaPlacement{% endif %}"
+        "{% if install.version |int > 10 %}- OS::TripleO::Services::NovaPlacement{% endif %}"
+        "{% if install.version |int > 10 %}- OS::TripleO::Services::PankoApi{% endif %}"
         - OS::TripleO::Services::Ntp
         - OS::TripleO::Services::SwiftProxy
         - OS::TripleO::Services::SwiftStorage
@@ -79,5 +80,5 @@ controller_role:
         - OS::TripleO::Services::OpenDaylightApi
         - OS::TripleO::Services::SensuClient
         - OS::TripleO::Services::FluentdClient
-        - "{% if install.version |int < 11 %}OS::TripleO::Services::VipHosts{% endif %}"
-        - "{% if install.version |int > 10 %}OS::TripleO::Services::MySQLClient{% endif %}"
+        "{% if install.version |int < 11 %}- OS::TripleO::Services::VipHosts{% endif %}"
+        "{% if install.version |int > 10 %}- OS::TripleO::Services::MySQLClient{% endif %}"
