Installing rhosp-release on OSP version >= 10
Change-Id: I4b6ed44feb825c2ae3792c2304e67409fb6d7a3a

--- a/plugins/tripleo-undercloud/deploy.yml
+++ b/plugins/tripleo-undercloud/deploy.yml
@@ -18,6 +18,15 @@
             msg: "Undercloud deployment failed... :("
         when: undercloud_deployment.rc != 0
 
+      - name: install rhosp-release
+        become: true
+        package:
+            state: latest
+            name: rhosp-release
+        when:
+            - install.version|openstack_distribution == 'OSP'
+            - install.version|int >= 10
+
       - name: fetch the stackrc file
         tags:
             - fetch_rc_file
