Grep for AUTH_URL from creds files
In latest RHOSP11 we have two variables AUTH_URL and newly AUTH_TYPE,
we want to grep AUTH_URL specifically.

Change-Id: Ia7af689997c5b25e46abad25a264e4d5f6f08d71

--- a/playbooks/tester/rally/pre.yml
+++ b/playbooks/tester/rally/pre.yml
@@ -50,7 +50,7 @@
   any_errors_fatal: true
   tasks:
 
-    - shell: "cat /home/{{ installer.user.name }}/overcloudrc | grep AUTH | cut -d '=' -f 2"
+    - shell: "cat /home/{{ installer.user.name }}/overcloudrc | grep AUTH_URL | cut -d '=' -f 2"
       register: oc_auth
 
     - shell: "cat /home/{{ installer.user.name }}/overcloudrc | grep USERNAME | cut -d '=' -f 2"
