--- a/roles/installer/ospd/overcloud/credentials/tasks/main.yml
+++ b/roles/installer/ospd/overcloud/credentials/tasks/main.yml
@@ -1,4 +1,4 @@
-- shell: "cat {{ overcloudrc }} | grep AUTH | cut -d '=' -f 2"
+- shell: "cat {{ overcloudrc }} | grep AUTH_URL | cut -d '=' -f 2"
   delegate_to: localhost
   register: oc_auth
 
