v1: Instance HA - open pacemaker remote port on IPv6
pacemaker remote listens on IPv6 address - port 3121 once OSP is deployed
on IPv6 topology (previously in Newton and older It listened on
IPv4 address).

Change-Id: I61eff0166152f7eeaee4a978bb1f02ee6c2383c2

--- a/playbooks/installer/ospd/post_install/instance_ha.yml
+++ b/playbooks/installer/ospd/post_install/instance_ha.yml
@@ -47,6 +47,12 @@
       - name: Make created iptables rules persistant
         shell: "/sbin/service iptables save"
 
+      - name: Open pacemaker_remote IPv6 port
+        shell: "ip6tables -I INPUT -p tcp --dport 3121 -j ACCEPT"
+
+      - name: Make created ip6tables rules persistant
+        shell: "/sbin/service ip6tables save"
+
       - name: Start pacemaker remote service at compute nodes
         service:
             name: pacemaker_remote
