BUGFIX [Tempest] RDO repo deprecated
RDO/Tempest is deprecated starting from Ocata.
Use original openstack/Tempest repo instead.

* Copy openstack_release filters from tripleo-undercloud plugin
* Add openstack_release_name filter to find name from version number
* Remove default git --revision (see below)
* Add upstream source for setup/git vars
* Add logic for cloning:
    * From Ocata (11) - use openstack/tempest instead of RDO
    * For RDO/tempest use release branch if no --revision set

Change-Id: I02445e988fc1d95d77b5e5f35cc16e469ad810c9

--- a/plugins/tempest/tasks/setup/git/main.yml
+++ b/plugins/tempest/tasks/setup/git/main.yml
@@ -12,9 +12,15 @@
       state: latest
 
 - name: Clone tempest
+  vars:
+      # Use RDO tempest for old versions
+      use_rdo: "{{ (test.openstack.version|openstack_release < 11) }}"
+      # Use designated branch for RDO tempset
+      branch_name: "{{ test.openstack.version|openstack_release_name|lower if use_rdo else omit }}"
   git:
-      repo: "{{ setup.repo }}"
-      version: "{{ test.revision | default(omit) }}"
+      # Use RDO tempest for old versions
+      repo: "{{ use_rdo | ternary (setup.repo.rdo, setup.repo.openstack) }}"
+      version: "{{ test.revision | default(branch_name) }}"
       dest: "~/{{ test.dir }}"
   register: tempest_repo
   when: setup.local_dir is not defined
