--- a/plugins/tempest/vars/setup/git.yml
+++ b/plugins/tempest/vars/setup/git.yml
@@ -1,5 +1,7 @@
 setup:
-    repo: https://github.com/redhat-openstack/tempest.git
+    repo:
+        rdo: https://github.com/redhat-openstack/tempest.git
+        openstack: https://github.com/openstack/tempest.git
 
     packages:
         - gcc
