BUGFIX Use recursive combine
When we use combine, we intend for a recursive merge that will gurantee
we don't loose data.
Without it "-e override.controller.disks.disk1.size=50" will loose the
rest of the node's "disks" dict.

Change-Id: I0007db5897d8d1f93650089794fb3da48e30629b

--- a/plugins/virsh/tasks/var_lookup.yml
+++ b/plugins/virsh/tasks/var_lookup.yml
@@ -15,7 +15,7 @@
 
 - name: merge overriden settings to the separate var
   set_fact:
-      topology_node: "{{ node_dict|default({}) | combine((override|default({})).get(var_file, {})) }}"
+      topology_node: "{{ node_dict|default({}) | combine((override|default({})).get(var_file, {}), recursive=True) }}"
 
 - debug:
     var: topology_node
