[Bugfix] Do not install deps for RPM Tempest in RHOS8-9 deployments
As there dependencies aren't available and therefore deployment
will fail in Tempest stage even if otherwise successful.
See RHOSINFRA-978 for details.

Change-Id: I4fc4bf9fc9983a6c12af65991b070b6d278d1b2e

--- a/roles/tester/tempest/setup/rpm/tasks/main.yml
+++ b/roles/tester/tempest/setup/rpm/tasks/main.yml
@@ -42,6 +42,7 @@
       name: "{{ item }}"
       state: present
   with_items: "{{ tester.setup.dependencies }}"
+  when: openstack_version|int >= 10
 
 - name: Create the tempest directory
   file:
