linting: upgraded hacking
Change-Id: Iffe46e6599d266d0af96aaa35098d778794c7a77

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,6 @@ commands =
      pip check
 
 [testenv:pep8]
-deps = hacking<0.11,>=0.10.0
 commands =
     flake8 {posargs}
 
@@ -92,7 +91,7 @@ whitelist_externals = bash
 # E123 skipped because it is ignored by default in the default pep8
 # E129 skipped because it is too limiting when combined with other rules
 # H404,H405,H101,H233,H306,H401,H301,H236 Skipped until they gets fixed
-ignore = E125,E123,E129,H404,H405,H101,H233,H306,H401,H301,H236
+ignore = E125,E123,E129,H404,H405,H101,H233,H306,H401,H301,H236,D
 show-source = True
 exclude = .git,.venv,.tox,dist,docs,*egg,library
 
