chore: upgraded hacking and moved flake8 section
Change-Id: Iffe46e6599d266d0af96aaa35098d778794c7a77

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,3 +30,12 @@ data_files =
 console_scripts =
     infrared = infrared.main:main
     ir = infrared.main:main
+    
+[flake8]
+# E125 is a won't fix until https://github.com/jcrocholl/pep8/issues/126 is resolved.  For further detail see https://review.openstack.org/#/c/36788/
+# E123 skipped because it is ignored by default in the default pep8
+# E129 skipped because it is too limiting when combined with other rules
+# H404,H405,H101,H233,H306,H401,H301,H236 Skipped until they gets fixed
+ignore = E125,E123,E129,H404,H405,H101,H233,H306,H401,H301,H236,D
+show-source = True
+exclude = .git,.venv,.tox,dist,docs,*egg,library,plugins/octario,plugins/gabbi
