Enable use of ANSIBLE_VERBOSITY env variable
ANSIBLE_VERBOSITY is also supported by ansible 2.3.x
but this enables the same feature for all versions when called
from infrared. This allows us to control verbosity from the
job itself without having to add -v[vv] params in so many places.

Change-Id: Ib610064565a8855630b1f785f8897a6760f57817

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-*.pyc
-.venv
 *.egg-info
-.idea/
-.profiles
-.workspaces
-/docs/build/
-.cache/
-/ansible.cfg
-.tox_*
-.tox/
-.plugins.ini
+*.pyc
 *.retry
+.cache
+.idea/
+.plugins.ini
+.profiles
+.tox/
+.tox_*
+.venv
+.workspaces
+/ansible.cfg
+/docs/build/
+/plugins/gabbi
+/plugins/octario
 infrared.cfg
-plugins/octario
