--- a/plugins/tripleo-overcloud/upgrade.yml
+++ b/plugins/tripleo-overcloud/upgrade.yml
@@ -55,6 +55,21 @@
         build: "latest"
         mirror: "{{ install.mirror | default(omit) }}"
 
+# todo(abregman): remove once rhbz#1434344 is resolved
+- name: Apply workaround for rhbz 1434344
+  hosts: controller
+  gather_facts: yes
+  any_errors_fatal: true
+  tags:
+      - upgrade
+  tasks:
+      - name: Start openstack-gnocchi-statsd
+        become: true
+        service:
+            name=openstack-gnocchi-statsd
+            state=started
+        ignore_errors: true
+
 - name: Overcloud Upgrade
   hosts: undercloud
   gather_facts: yes
